<resources>
    <string name="app_name">ad-free</string>
    <string name="enjoy">enjoy your <b>ad-free</b> music experience</string>
    <string name="chromecast_subtitle">requires chromecast audio to announce current playback as system notification. see option <u>let others control your cast media</u> in google home app (experimental).</string>
    <string name="troubleshooting_text"><![CDATA[> troubleshooting]]></string>
    <string name="new_version_text"><![CDATA[> a new version is]]></string>
    <string name="pager_description">Main application screens</string>
    <string name="detector_title_placeholder"><![CDATA[> title]]></string>
    <string name="detector_subtitle_placeholder">subtitle</string>
    <string name="mod_activity_title">change how ad-free internally works</string>
    <string name="mod_adfree_title"><![CDATA[> ad-free]]></string>
    <string name="mod_adfree_subtitle_enabled">enabled</string>
    <string name="mod_active_detectors_title"><![CDATA[> ad detectors]]></string>
    <string name="mod_active_detectors_subtitle">choose active detectors</string>
    <string name="mod_delay_unmute_title"><![CDATA[> delay unmute]]></string>
    <string name="mod_delay_unmute_subtitle">not delayed</string>
    <string name="mod_always_on_title"><![CDATA[> always-on notification]]></string>
    <string name="mod_always_on_subtitle">prevents ad-free form being killed by Android OS. leave disabled unless you run into issues.</string>
    <string name="mod_google_cast_title"><![CDATA[> mute chromecast audio]]></string>
    <string name="mod_version_title"><![CDATA[> version X.X]]></string>
    <string name="local_music_audio_volume_title"><![CDATA[> audio volume]]></string>
    <string name="local_music_audio_volume_subtitle">configure volume of playback</string>
    <string name="local_music_directory_title"><![CDATA[> music directory]]></string>
    <string name="local_music_directory_subtitle">directory is not set</string>
    <string name="local_music_play_until_end_title"><![CDATA[> play until end]]></string>
    <string name="local_music_play_until_end_subtitle">play music until end before unmuting ad</string>
    <string name="local_music_loop_title"><![CDATA[> loop music]]></string>
    <string name="local_music_loop_subtitle">loop music until end of ad</string>
    <string name="textdetector_activity_title">The text detector flags a notification based on the presence of text.</string>
    <string name="det_add_entry_title"><![CDATA[> Add Entry]]></string>
    <string name="det_add_entry_subtitle">\"Add a new entry for the text detector</string>
    <string name="det_browse_help_title"><![CDATA[> Browse Help]]></string>
    <string name="det_browse_help_subtitle">Browse help page for more information</string>
    <string name="hint_package_name">package name</string>
    <string name="hint_line_separated_list">line separated list of text</string>
    <string name="desc_more_options">More options</string>
    <string name="desc_website">View website</string>
    <string name="desc_twitter">View Twitter profile</string>
    <string name="settings_title">what do you want to do while ads are being played</string>
    <string name="desc_try_plugin">Test plugin</string>
    <string name="crash_title">ad-free crashed</string>
    <string name="send_logs">crash_send_logs</string>
    <string name="delete_dialog_message">Do you want to delete the entry?</string>
    <string name="detectors_mask_title">detectors find ads. choose what\'s active.</string>
    <string name="delay_unmute_description">change how long advertisement stays muted before playback continues</string>
    <string name="delay_unmute_default_value">0 seconds</string>
    <string name="detector_title_format">&gt; %s</string>
    <string name="category_subtitle_format">configure detectors for %s</string>
    <string name="replacer_setting_item_name">item name</string>
    <string name="mod_active_detectors_count">choose active detectors (%1$d/%2$d)</string>
    <plurals name="mod_seconds_format">
        <item quantity="one">%1$d second</item>
        <item quantity="other">%1$d seconds</item>
    </plurals>
    <string name="mod_status_enabled">enabled</string>
    <string name="mod_status_disabled">disabled</string>
    <string name="mod_status_toast_enabled">ad-free enabled</string>
    <string name="mod_service_connected">notification service is connected</string>
    <string name="mod_service_disconnected">notification service is disconnected</string>
    <string name="mod_version_format">&gt; version %1$s / %2$d</string>
    <string name="home_permission_required">touch here to grant permission</string>
    <string name="home_enjoy_adfree"><![CDATA[<font color="#FFFFFF">enjoy</font> your <font color="#FFFFFF">ad-free</font> music experience.]]></string>
    <string name="whoops_error_chosen_directory">Whoops, error with chosen directory. Choose a different one. %1$s</string>
    <string name="error_no_music_found_directory">Whoops, no music found in current audio directory</string>
    <string name="error_audio">Whoops, there was an error with audio</string>
    <string name="suggest_something">suggest something …</string>
    <string name="categories_header_text"><![CDATA[detectors <font color=#FFFFFF>find ads</font>. choose what\'s active.]]></string>
    <string name="options">Options</string>
    <string name="delay_unmute"><![CDATA[> delay unmute]]></string>
    <string name="trying_out_plugin">Trying out plugin</string>
    <string name="mod_activity_header"><![CDATA[change how <font color=#FFFFFF>ad-free</font> internally works.]]></string>
    <string name="local_music">local music</string>
    <string name="mute_audio">mute audio</string>
    <string name="ad_blocking_notification">Ad blocking notification</string>
    <string name="fine_tune_detectors_for_category"><![CDATA[fine-tune detectors for <font color=#FFFFFF>%1$s</font>.]]></string>
    <string name="settings_ads_action_question"><![CDATA[what do you want to do while <font color=#FFFFFF>ads </font>are <font color=#FFFFFF>being played ?</font>]]></string>
    <string name="about_author_message"><![CDATA[built with much &lt;3 by <font color=#FFFFFF>abertschi</font>. get my latest hacks and follow me on twitter.]]></string>
    <string name="crash_title_quote"><![CDATA[success is not final, failure is not fatal: it is the <font color=#FFFFFF>courage</font> to <font color=#FFFFFF>continue</font> that counts. — Winston Churchill]]></string>
    <string name="crash_subtitle_text"><![CDATA[<font color=#FFFFFF>ad-free</font> crashed. be courageous and continue. send the <font color=#FFFFFF>crash report </font>. tab here, choose your mail application and send the report.]]></string>
</resources>
