<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_home_views"
    tools:context="ch.abertschi.adfree.view.home.HomeActivity">

    <TextView
        android:id="@+id/enjoy"
        style="@style/AppTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollHorizontally="false"
        android:text="@string/enjoy"
        android:textAlignment="textStart"
        android:textColor="#C4BCAF"
        android:textSize="@dimen/title_text_size"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/troubleshooting"
        style="@style/AppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:scrollHorizontally="false"
        android:text="@string/troubleshooting_text"
        android:textAlignment="textEnd"
        android:textColor="#C4BCAF"
        android:textSize="@dimen/normal_text_small"
        android:visibility="visible" />

    <TextView
        android:id="@+id/version_update_reminder"
        style="@style/AppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:scrollHorizontally="false"
        android:text="@string/new_version_text"
        android:textAlignment="textEnd"
        android:textColor="#C4BCAF"
        android:textSize="@dimen/normal_text_small"
        android:visibility="gone" />

</LinearLayout>