<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="VisualLintSystemWindow">

    <LinearLayout
        android:id="@+id/layout_configure_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/configure_audio_title"
            style="@style/AppTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="false"
            android:text="@string/local_music_audio_volume_title"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/configure_audio_subtitle"
            style="@style/AppTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_title_subtitle"
            android:scrollHorizontally="false"
            android:text="@string/local_music_audio_volume_subtitle"
            android:textColor="#C4BCAF"
            android:textSize="@dimen/normal_text_small" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="#08C4BCAF" />

    <LinearLayout
        android:id="@+id/layout_music_dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/music_dir_title"
            style="@style/AppTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="false"
            android:text="@string/local_music_directory_title"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/music_dir_subtitle"
            style="@style/AppTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_title_subtitle"
            android:scrollHorizontally="false"
            android:text="@string/local_music_directory_subtitle"
            android:textColor="#C4BCAF"
            android:textSize="@dimen/normal_text_small" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="#08C4BCAF" />

    <LinearLayout
        android:id="@+id/layout_play_until_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_right_subtitle_switch"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/local_music_title_play_until_end"
                style="@style/AppTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollHorizontally="false"
                android:text="@string/local_music_play_until_end_title"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/local_music_play_until_end_subtext"
                style="@style/AppTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_title_subtitle"
                android:scrollHorizontally="false"
                android:text="@string/local_music_play_until_end_subtitle"
                android:textColor="#C4BCAF"
                android:textSize="@dimen/normal_text_small" />
        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/local_music_play_until_end_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:contentDescription="@string/local_music_play_until_end_title" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="#08C4BCAF" />

    <LinearLayout
        android:id="@+id/layout_loop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_right_subtitle_switch"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/local_music_title_loop"
                style="@style/AppTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollHorizontally="false"
                android:text="@string/local_music_loop_title"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/local_music_loop_subtext"
                style="@style/AppTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_title_subtitle"
                android:scrollHorizontally="false"
                android:text="@string/local_music_loop_subtitle"
                android:textColor="#C4BCAF"
                android:textSize="@dimen/normal_text_small" />
        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/local_music_loop_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:contentDescription="@string/local_music_loop_title" />
    </LinearLayout>

</LinearLayout>