<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textdetector_activity_title"
            style="@style/AppTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="false"
            android:text="@string/textdetector_activity_title"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/title_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_right_subtitle_switch"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/det_title_text"
                style="@style/AppTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center_vertical"
                android:scrollHorizontally="false"
                android:text="@string/det_add_entry_title"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/det_subtitle_text"
                style="@style/AppTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_title_subtitle"
                android:scrollHorizontally="false"
                android:text="@string/det_add_entry_subtitle"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/normal_text_small" />

            <View
                android:id="@+id/mod_det_separation"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/textColorSecondaryTransparent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_right_subtitle_switch"
            android:orientation="vertical">

            <TextView
                android:id="@+id/det_title_help"
                style="@style/AppTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center_vertical"
                android:scrollHorizontally="false"
                android:text="@string/det_browse_help_title"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/det_subtitle_help"
                style="@style/AppTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_title_subtitle"
                android:scrollHorizontally="false"
                android:text="@string/det_browse_help_subtitle"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/normal_text_small" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/mod_text_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:scrollbars="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detector_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp" />
    </ScrollView>

</LinearLayout>