<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_right_subtitle_switch"
            android:orientation="vertical">

            <EditText
                android:id="@+id/det_title"
                style="@style/AppTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_package_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:scrollHorizontally="false"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/normal_text_size"
                tools:ignore="VisualLintTextFieldSize,VisualLintSystemWindow" />

            <EditText
                android:id="@+id/det_subtitle"
                style="@style/AppTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_title_subtitle"
                android:hint="@string/hint_line_separated_list"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textNoSuggestions"
                android:minHeight="48dp"
                android:scrollHorizontally="false"
                android:textColor="#C4BCAF"
                android:textSize="@dimen/normal_text_small"
                tools:ignore="VisualLintTextFieldSize,VisualLintSystemWindow" />
        </LinearLayout>

        <ImageView
            android:id="@+id/det_more"
            style="@style/AppTextView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/desc_more_options"
            android:scaleType="fitEnd"
            android:src="@mipmap/dots_48"
            android:textColor="#C4BCAF"
            android:textSize="@dimen/title_text_size" />

    </LinearLayout>

    <View
        android:id="@+id/mod_det_separation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="#08C4BCAF" />

</LinearLayout>