<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_home_views"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/more_settings"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_gravity="end"
            android:scaleType="fitEnd"
            android:src="@mipmap/dots_48"
            android:contentDescription="@string/desc_more_options" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/aboutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/authorTitle"
                style="@style/AppTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollHorizontally="false"
                android:textAlignment="textStart"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/title_text_size"
                tools:text="Author" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/icons_first_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/web"
                android:contentDescription="@string/desc_website" />

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_marginStart="16dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/bird"
                android:contentDescription="@string/desc_twitter" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>